--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ oauthlib==3.3.1
 psycopg2-binary==2.9.10
 pydantic==2.11.7
 pydantic_core==2.33.2
+razorpay==2.0.0
 requests==2.32.5
 sniffio==1.3.1
 starlette==0.47.3
